--- a/templates/play_deck/index.html.twig
+++ b/templates/play_deck/index.html.twig
@@ -44,7 +44,8 @@
                             <span>Question:</span>
                             <div class="cardContain">
                                 {% set randomCartesDeckNotInPositionCartesByUtilisateur = random(cartesDeckNotInPositionCartesByUtilisateur)%}
-                                {{ randomCartesDeckNotInPositionCartesByUtilisateur.question }}
+                                <div class="question active">{{ randomCartesDeckNotInPositionCartesByUtilisateur.question }}</div>
+                                <div class="response">{{ randomCartesDeckNotInPositionCartesByUtilisateur.reponse }}</div>
                             </div>
                         </div>
                         {% else %}
@@ -99,6 +100,9 @@
                     </div>
                 </div>
             </div>
+            <button type="button" class="btn btn-primary" id="buttonResponse">
+                Montrer la réponse
+            </button>
         </div>
 
         <div id="selectDeck">
