--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 h1 {
     color: red;
 }
@@ -95,33 +102,79 @@ h2 {
   }
 
 
+
+  .missing-card {
+
+    height: 400px;
+
+  }
+
+
+
+
+
   
-  .carte{
-    display: flex;
-  justify-content: center; /* centre le contenu horizontalement */
-  align-items: center; /* centre le contenu verticalement */
+  .card-container{
+    font-size: 20px;
+    display: inline-block;
+    perspective: 1000px;
+  }
+
+
+  .card{
     height: auto;
     width: auto;
     min-height: 400px;
     min-width: 300px;
-    display: inline-block;
-    padding: 20px;
+    position: relative;
+    /* height: 100%; */
+    /* justify-content: center; */
     border-radius: 20px;
-    background-color: rgb(255, 255, 255);
-    /* transition: background-color 3s ease-in-out; */
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    display: inline-block;
   }
 
-
-  .cardContain{
-    height: auto;
-    display: flex;
-  align-items: center;
-  justify-content: center;
-    background-color: #bd1d1d;
+  .question, .response {
+    border: 15px solid whitesmoke;
+    border-radius: 15px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
   }
-
 
   .response{
+  transform: rotateY(180deg);
+  }
+
+
+  .flipped {
+    transform: rotateY(180deg);
+  }
+
+
+
+
+  .header-card{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+    height: 40px;
+    color: white;
+    background-color: #000000;
+    border-radius: 10px;
+  }
+
+  .body-card{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+    height: 330px;
+  }
+
+  
+  /* .response{
     display:none;
   }
 
@@ -135,7 +188,10 @@ h2 {
 
   .question.active{
     display:block;
-  }
+  } */
+
+
+  
 
   @media screen and (max-width: 750px){
     
