--- a/templates/play_deck/index.html.twig
+++ b/templates/play_deck/index.html.twig
@@ -40,70 +40,103 @@
                     <div class="tab-content active" data-tab="tab1">
 
                         {% if cartesDeckNotInPositionCartesByUtilisateur|length != 0 %}
-                        <div class="carte">
-                            <span>Question:</span>
-                            <div class="cardContain">
+                        <div class="card-container">
+                            <div class="card">
                                 {% set randomCartesDeckNotInPositionCartesByUtilisateur = random(cartesDeckNotInPositionCartesByUtilisateur)%}
-                                <div class="question active">{{ randomCartesDeckNotInPositionCartesByUtilisateur.question }}</div>
-                                <div class="response">{{ randomCartesDeckNotInPositionCartesByUtilisateur.reponse }}</div>
+                                <div class="question">
+                                    <div class="header-card"><span>Question:</span></div>
+                                    <div class="body-card"><p>aaaa aaaa a aa a aa aaaaaaaaaaa aa aaaaaaaaaaaa aaaaa{{ randomCartesDeckNotInPositionCartesByUtilisateur.question }}</p></div>
+                                </div>
+                                <div class="response">
+                                    <div class="header-card"><span>Reponse:</span></div>
+                                    <div class="body-card"><p>{{ randomCartesDeckNotInPositionCartesByUtilisateur.reponse }}</p></div>
+                                </div>
                             </div>
                         </div>
                         {% else %}
-                            Pas de cartes dans cet onglet !
+                            <div class="missing-card">
+                                Pas de cartes dans cet onglet !
+                            </div>
                         {% endif %} 
 
                     </div>
                     <div class="tab-content" data-tab="tab2">
 
                         {% if cartesLevel0|length != 0 %}
-                        <div class="carte">
-                            <span>Question:</span>
-                            <div class="cardContain">
+                        <div class="card-container">
+                            <div class="card">
                                 {% set randomCarteLevel0 = random(cartesLevel0)%}
-                                {{randomCarteLevel0.question }}
+                                <div class="question">
+                                    <div class="header-card"><span>Question:</span></div>
+                                    <div class="body-card"><p>aaaa aaaa a aa a aa aaaaaaaaaaa aa aaaaaaaaaaaa aaaaa{{ randomCarteLevel0.question }}</p></div>
+                                </div>
+                                <div class="response">
+                                    <div class="header-card"><span>Reponse:</span></div>
+                                    <div class="body-card"><p>{{ randomCarteLevel0.reponse }}</p></div>
+                                </div>
                             </div>
                         </div>
                         {% else %}
-                            Pas de cartes dans cet onglet !
+                            <div class="missing-card">
+                                Pas de cartes dans cet onglet !
+                            </div>
                         {% endif %} 
                     
                     </div>
                     <div class="tab-content" data-tab="tab3">
 
                         {% if cartesLevel1|length != 0 %}
-                        <div class="carte">
-                            <span>Question:</span>
-                            <div class="cardContain">
+                        <div class="card-container">
+                            <div class="card">
                                 {% set randomCarteLevel1 = random(cartesLevel1)%}
-                                {{randomCarteLevel1.question }}
+                                <div class="question">
+                                    <div class="header-card"><span>Question:</span></div>
+                                    <div class="body-card"><p>aaaa aaaa a aa a aa aaaaaaaaaaa aa aaaaaaaaaaaa aaaaa{{ randomCarteLevel1.question }}</p></div>
+                                </div>
+                                <div class="response">
+                                    <div class="header-card"><span>Reponse:</span></div>
+                                    <div class="body-card"><p>{{ randomCarteLevel1.reponse }}</p></div>
+                                </div>
                             </div>
                         </div>
                         {% else %}
+                        <div class="missing-card">
                             Pas de cartes dans cet onglet !
+                        </div>
                         {% endif %} 
 
                     </div>
                     <div class="tab-content" data-tab="tab4">
 
                         {% if cartesLevel2|length != 0 %}
-                        <div class="carte">
-                            <span>Question:</span>
-                            <div class="cardContain">
+                        <div class="card-container">
+                            <div class="card">
                                 {% set randomCarteLevel2 = random(cartesLevel2)%}
-                                {{randomCarteLevel1.question }}
+                                <div class="question">
+                                    <div class="header-card"><span>Question:</span></div>
+                                    <div class="body-card"><p>aaaa aaaa a aa a aa aaaaaaaaaaa aa aaaaaaaaaaaa aaaaa{{ randomCarteLevel2.question }}</p></div>
+                                </div>
+                                <div class="response">
+                                    <div class="header-card"><span>Reponse:</span></div>
+                                    <div class="body-card"><p>{{ randomCarteLevel2.reponse }}</p></div>
+                                </div>
                             </div>
                         </div>
                         {% else %}
+                        <div class="missing-card">
                             Pas de cartes dans cet onglet !
+                        </div>
                         {% endif %} 
 
                     </div>
                 </div>
             </div>
-            <button type="button" class="btn btn-primary" id="buttonResponse">
+
+            <button type="button" onclick="flip()" class="btn btn-primary" id="buttonResponse">
                 Montrer la réponse
             </button>
         </div>
+
 
         <div id="selectDeck">
             <div class="tabsSelectDeck">
@@ -171,7 +204,8 @@
             </div>
         </div>
     </div>
-  
+
+
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
